That's not my name. That's not my name.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,7 +12,7 @@ description: >
   experience.
 
 author: nossr50
-authors: [GJ, NuclearW, bm01, Glitchfinder, TfT_02, toothplck1]
+authors: [GJ, NuclearW, bm01, Glitchfinder, TfT_02, t00thpick1]
 website: http://dev.bukkit.org/server-mods/mcmmo/
 
 main: com.gmail.nossr50.mcMMO
