Added config option to make .new config files instead over writing over old ones when updating

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -24,6 +24,8 @@ General:
     Power_Level_Cap: 0
     #Should mcMMO print out debug messages?
     Verbose_Logging: false
+    #Should mcMMO over-write configs to update, or make new ones ending in .new?
+    Config_Update_Overwrite: true
 
 Database_Purging:
     #Amount of time (in hours) to wait between database purging
