--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -277,6 +277,7 @@ permissions:
             mcmmo.ability.herbalism.greenterra: true
             mcmmo.ability.herbalism.greenthumb.all: true
             mcmmo.ability.herbalism.hylianluck: true
+            mcmmo.ability.herbalism.shroomthumb: true
     mcmmo.ability.herbalism.doubledrops:
         description: Allows double drop chance from Herbalism
     mcmmo.ability.herbalism.farmersdiet:
@@ -368,6 +369,8 @@ permissions:
             mcmmo.ability.herbalism.greenthumb.plants.crops: true
     mcmmo.ability.herbalism.hylianluck:
         description: Allows access to the Hylian Luck ability
+    mcmmo.ability.herbalism.shroomthumb:
+        description: Allows access to the Shroom Thumb ability
     mcmmo.ability.mining.*:
         default: false
         description: Allows access to all Mining abilities
