--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -22,7 +22,7 @@ Skills:
     Acrobatics:
         # Dodge_ChanceMax: Maximum chance of dodging when on Dodge_MaxBonusLevel or higher
         # Dodge_MaxBonusLevel: On this level or higher, the dodge chance will not go higher than Dodge_ChanceMax
-        # Dodge_DamageModifer: Dodge damage will be divided by this multiplier
+        # Dodge_DamageModifer: Dodge damage will be divided by this modifier
         Dodge_ChanceMax: 20.0
         Dodge_MaxBonusLevel: 800
         Dodge_DamageModifier: 2
