We don't need this here.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -336,7 +336,7 @@ Experience:
             Wither: 7.0
             Witch: 4.0
             Iron_Golem: 2.0
-            Wither_Skeleton: 4.0;
+            Wither_Skeleton: 4.0
 #
 #  Settings for commands
 ###
