--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -247,6 +247,9 @@ Skills:
         SuperRepair_ChanceMax: 100.0
         SuperRepair_MaxBonusLevel: 1000
 
+        # Salvage_UnlockLevel: Level when Salvage become available
+        Salvage_UnlockLevel: 600
+
         Arcane_Forging:
             May_Lose_Enchants: true
             Rank_Levels:
