--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -16,6 +16,8 @@ Skills:
     General:
         # This setting will determine when the length of every ability gets longer with 1 second
         Ability_IncreaseLevel: 50
+        # This setting determines how many enchant levels to use when buffing Super Breaker & Giga Drill Breaker
+        Ability_EnchantBuff: 5
     #
     #  Settings for Acrobatics
     ###
