--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -72,7 +72,9 @@ Mods:
 Items:
     Chimaera_Wing:
         Enabled: true
-        Feather_Cost: 10
+        Prevent_Use_Underground: true
+        Use_Cost: 1
+        Recipe_Cost: 5
         Item_ID: 288
 
 #
