--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -48,6 +48,7 @@ MySQL:
     Server:
         Port: 3306
         Address: localhost
+    QueueThrottle: 100L
 #
 #  Settings for Hardcore mode
 ###
