--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -72,6 +72,7 @@ Mods:
 Items:
     Chimaera_Wing:
         Enabled: true
+        Cooldown: 240
         Prevent_Use_Underground: true
         Use_Cost: 1
         Recipe_Cost: 5
