Improving Chimaera Wing - part 2
 * Added a warmup before using a Chimaera Wing
 * Closes #740

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -73,6 +73,7 @@ Items:
     Chimaera_Wing:
         Enabled: true
         Cooldown: 240
+        Warmup: 5
         Prevent_Use_Underground: true
         Use_Cost: 1
         Recipe_Cost: 5
