Added health display for mobs during combat.
During combat, players will now see a healthbar appear over the head of
hostile mobs when they are damaged. This healthbar will have two display
options - HEARTS and BAR - which can be changed via the /mobhealth
command.

New Permissions:
mcmmo.mobhealthdisplay - Allows viewing of mob health display
mcmmo.commands.mobhealth - Allows access to the /mobhealth command

New Config Options (config.yml):
Mob_Healthbar.Display_Type - the default health display type
Mob_Healthbar.Display_Time - the amount of time to show health display

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,6 +27,12 @@ General:
     # Should mcMMO over-write configs to update, or make new ones ending in .new?
     Config_Update_Overwrite: true
 
+Mob_Healthbar
+    # Default display for mob health bars - HEARTS, BAR, or DISABLED
+    Display_Type: HEARTS
+    # Amount of time (in seconds) to display. To display permanently, set to -1
+    Display_Time: 3
+
 Database_Purging:
     # Amount of time (in hours) to wait between database purging
     # To only run at server start, set to 0
